# lld-backend-rust

./: Cargo.toml  ReadMe.md
src/: main.rs
src/lld-1-rust/0-basics/: Cargo.toml
src/lld-1-rust/1-oops/concepts/: 0. memory.rs  1. abstraction.rs  10. abstract-classes.rs  11. association.rs  12. static-vs-instance-methods.rs  2. encapsulation.rs  3. access-modifiers.rs  4. classes.rs  5. inheritance.rs  6. composition.rs  7. chaining-of-constructors.rs  8.a. run-time-polymorphism.rs  8.b. compile-time-polymorphism.rs  8.c. constructor-overloading.rs  8.d. operator-overloading.rs  9. interfaces.rs
src/lld-1-rust/1-oops/oops1/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
src/lld-1-rust/1-oops/oops3/: 1.rs  6.rs
src/lld-1-rust/1-oops/oops4/: 4.rs  7.rs  8.rs
src/lld-1-rust/2-concurrency/concepts/: 1. async.rs  2. concurrency.rs  3. parallelism.rs  4. future.rs
src/lld-1-rust/2-concurrency/concurrency-1/: 5.rs  6.rs  8.a.rs  8.b.rs
src/lld-1-rust/2-concurrency/concurrency-2/: 4.rs  6.rs  mergesort.rs
src/lld-1-rust/2-concurrency/concurrency-3/: 8.rs  adder-subtractor.rs  multithreading.md
src/lld-1-rust/2-concurrency/concurrency-4/: 10.rs  4.rs  5.rs  9.rs  producer-consumer.rs
src/lld-1-rust/3-advanced-concepts/0. concepts/: any.rs  deref-coercion.rs  function-pointers.rs
src/lld-1-rust/3-advanced-concepts/advanced-1/: 10.rs  4.rs  5.rs  9.rs
src/lld-1-rust/3-advanced-concepts/advanced-2/: 1.rs
src/lld-2-design/0-SOLID/: 1. SRP.rs  2. OCP.rs  3. LSP.rs  4. ISP.rs  5. DIP.rs
src/lld-3-case studies/: 1. Pen.rs
(+12 files in other folders)
